@@ -691,9 +691,18 @@ class HandleLineBlock(NodeHandler, docutils.nodes.line_block):
 
 class HandleLine(NodeHandler, docutils.nodes.line):
     def gather_elements(self, client, node, style):
+        # line nodes have no classes, they have to inherit from the outermost lineblock (sigh)
+        # For more info see Issue 471 and its test case.
+        
+        parent = node
+        while isinstance(parent.parent, (docutils.nodes.line, docutils.nodes.line_block)):
+            parent=parent.parent
+        p_class = (parent.get('classes') or  ['line'])[0]
+        print node, p_class
+        qstyle = copy(client.styles[p_class])
         # Indent .5em per indent unit
         i=node.__dict__.get('indent',0)
-        qstyle = copy(client.styles['line'])
+        #qstyle = copy(client.styles['line'])
         qstyle.leftIndent += client.styles.adjustUnits("0.5em")*i
         text = client.gather_pdftext(node)
         if not text: # empty line
